--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Neon Block Bingo AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        // Tarayıcıda process hatasını önlemek için (Vercel deployment fix)
+        window.process = window.process || { env: { API_KEY: '' } };
+    </script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800;900&family=Rajdhani:wght@500;600;700&display=swap');
 
@@ -146,5 +150,6 @@
 </head>
 <body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
