--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Neon Block Bingo AI</title>
+    <!-- Tailwind CSS (Basitlik için CDN korunmuştur, prodüksiyonda package.json üzerinden kurulabilir) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        // Tarayıcıda process hatasını önlemek için (Vercel deployment fix)
+        // Tarayıcıda process hatasını önlemek için global tanımlama
         window.process = window.process || { env: { API_KEY: '' } };
     </script>
     <style>
@@ -139,17 +139,19 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.90.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
